--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.OpenInnovation.ecs">
+    package="com.example.openinnovation">
 
     <application
         android:allowBackup="true"
@@ -7,5 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+        <activity android:name=".AjtStation"></activity>
+        <activity android:name=".SecondMain" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".Station" />
+        <activity android:name=".AjoutStation" />
+        <activity android:name=".StationAjt" />
+        <activity android:name=".ConnexionAdmin" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
