--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AjtStation"></activity>
+        <activity android:name="com.OpenInnovation.ecs.back.Personne"></activity>
+        <activity android:name=".AjtStation" />
         <activity android:name=".SecondMain" />
         <activity android:name=".Main2Activity" />
         <activity android:name=".Station" />
